Link wrapping fixes

--- a/css.css
+++ b/css.css
@@ -79,6 +79,8 @@ a{
 	justify-content: center;
 	align-items: center;
 	flex-direction: row;
+	width: 50%;
+	flex-wrap: wrap;
 }
 
 .link{
@@ -88,8 +90,7 @@ a{
 	border: solid #D1D1D1 1px;
 	border-radius: 5px;
 	transition:.2s;
-	margin-left: 5px;
-	margin-right: 5px;
+	margin: 5px;
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
